--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 header {
     background-color: #f2e9cb;
     color: #228B22;
-    padding: 20px;
+    padding: 15px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,7 +17,7 @@ header {
 }
 
 .logo {
-    width: 150px;
+    width: 500px;
     height: auto;
 }
 
@@ -111,4 +111,67 @@ footer {
     background-color: #228B22;
     color: white;
     text-align: center;
+}
+
+.standard-img {
+    width: 100px; /* Ajuste conforme necessário */
+    height: auto; /* Mantém a proporção */
+    display: block;
+    margin: 0 auto;
+}
+
+.payment-cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px; /* Espaço entre as imagens */
+}
+
+.payment-cards .card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px; /* Ajuste a distância entre as imagens */
+}
+
+.standard-img {
+    width: 200px; /* Ajuste conforme necessário */
+    height: auto;
+}
+.logo {
+    width: 150px;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    background-color: transparent; /* Garantir que o fundo da imagem será transparente */
+}
+
+.interactive-card1 {
+    background: #f2e9cb;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    width: 100%;
+    max-width: 600px;
+    margin-bottom: 20px;
+}
+
+.interactive-card1 h3 {
+    font-size: 24px;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+.interactive-card1 p {
+    font-size: 16px;
+    color: #333;
+    margin-bottom: 20px;
+}
+
+.interactive-card1 img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    max-width: 600px;
 }
