--- a/styles.css
+++ b/styles.css
@@ -420,12 +420,12 @@ header {
 
 .plano h4 {
     font-size: 1.8em;
-    color: #228B22;
+    color: #333;
     margin-bottom: 10px;
 }
 
 .plano .preco {
-    font-size: 1.5em;
+    font-size: 2.0em;
     color: #333;
     font-weight: bold;
     margin: 10px 0;
@@ -440,29 +440,28 @@ header {
 
 .plano ul li {
     font-size: 1em;
-    color: #555;
+    color: #333;
     margin-bottom: 8px;
 }
 
 .plano em {
     font-style: italic;
-    color: #228B22; /* Destaque com verde vibrante */
+    color: #333; /* Destaque com verde vibrante */
     font-weight: bold; /* Adiciona peso ao texto */
     font-size: 1.1em; /* Aumenta levemente o tamanho da fonte */
-    background-color: #e6ffe6; /* Fundo leve para realçar */
     padding: 5px; /* Espaço ao redor do texto */
     border-radius: 5px; /* Bordas arredondadas */
     display: inline-block; /* Garante que o fundo se ajuste ao texto */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Efeito de sombra para destacá-lo */
+    box-shadow: 0 2px 4px rgba(14, 0, 0, 0.1); /* Efeito de sombra para destacá-lo */
 }
 
 
 .basico {
     border-color: #008000;
-    background-color: #e6ffe6;
+    background-color: #dce8dc;
 }
 
 .premium {
-    border-color: #006400;
-    background-color: #d9f2d9;
+    border-color: #1a0985;
+    background-color: #dcdbe7;
 }
